--- a/"Домашнее_задание_4_ipynb".ipynb
+++ b/"Домашнее_задание_4_ipynb".ipynb
@@ -83,7 +83,7 @@
           "height": 325
         },
         "id": "EbPU_V2LJwQs",
-        "outputId": "95bf3d2c-46fa-4dd6-b820-0ae395190550"
+        "outputId": "113a00a6-ec3d-4dd3-c611-f67d9b0f8a01"
       },
       "execution_count": 1,
       "outputs": [
@@ -140,7 +140,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d216ab61-8dfb-4cb0-9b40-c2c783d35910\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f49aae71-472c-4ee1-a751-8dc887e12132\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -310,7 +310,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d216ab61-8dfb-4cb0-9b40-c2c783d35910')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f49aae71-472c-4ee1-a751-8dc887e12132')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -362,12 +362,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d216ab61-8dfb-4cb0-9b40-c2c783d35910 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f49aae71-472c-4ee1-a751-8dc887e12132 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d216ab61-8dfb-4cb0-9b40-c2c783d35910');\n",
+              "        const element = document.querySelector('#df-f49aae71-472c-4ee1-a751-8dc887e12132');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -387,8 +387,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d0f2e948-447f-472c-bec9-1f55cc91ab63\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d0f2e948-447f-472c-bec9-1f55cc91ab63')\"\n",
+              "    <div id=\"df-b607e254-5e0a-439d-8953-5e7bc26af42b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b607e254-5e0a-439d-8953-5e7bc26af42b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -507,7 +507,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d0f2e948-447f-472c-bec9-1f55cc91ab63 button');\n",
+              "            document.querySelector('#df-b607e254-5e0a-439d-8953-5e7bc26af42b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -567,16 +567,19 @@
         "calinski_harabasz_kmeans = calinski_harabasz_score(df_processed, clusters_kmeans)\n",
         "\n",
         "print(\"\\n=== Метрики качества для K-Means ===\")\n",
-        "print(f\"Silhouette Score: {silhouette_kmeans:.4f} (чем ближе к 1, тем лучше)\")\n",
-        "print(f\"Davies-Bouldin Index: {davies_bouldin_kmeans:.4f} (чем ближе к 0, тем лучше)\")\n",
-        "print(f\"Calinski-Harabasz Index: {calinski_harabasz_kmeans:.4f} (чем больше, тем лучше)\")"
+        "print(f\"Silhouette Score: {silhouette_kmeans:.4f} (чем ближе к 1, тем лучше)\")#насколько хорошо каждая точка принадлежит своему кластеру\n",
+        "                                                                              #и насколько далеко она от соседнего кластера\n",
+        "print(f\"Davies-Bouldin Index: {davies_bouldin_kmeans:.4f} (чем ближе к 0, тем лучше)\")#измеряет, насколько “похожи” кластеры между собой,\n",
+        "                                                                                      #учитывая их плотность и расстояния между центрами\n",
+        "print(f\"Calinski-Harabasz Index: {calinski_harabasz_kmeans:.4f} (чем больше, тем лучше)\")#сравнивает разброс между кластерами и внутри них.\n",
+        "                                                                                        #Показывает, насколько кластеры плотные и отделённые"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9R3GjDBXKmto",
-        "outputId": "e6da2639-6c64-4e05-8072-5e37c4bb98bf"
+        "outputId": "b4879f2e-5cee-4fc8-ea46-9f5d3d960979"
       },
       "execution_count": 2,
       "outputs": [
@@ -631,9 +634,9 @@
           "height": 724
         },
         "id": "51Rixff0KsiI",
-        "outputId": "8ec40cea-a61a-4999-e64c-49b0812d966c"
+        "outputId": "ebd00799-55f7-4389-eba0-68e6593290f7"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -717,12 +720,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 498
         },
         "id": "tTU0z0B1LO74",
-        "outputId": "725a9fd5-60f4-4434-ff6f-8576d286b16a"
+        "outputId": "d4cd85ba-4a44-4bcd-8dd5-dc3008001784"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -772,9 +775,9 @@
         "calinski_harabasz_optimal = calinski_harabasz_score(df_processed, clusters_optimal)\n",
         "\n",
         "print(\"\\n=== Метрики качества для K-Means (k=4) ===\")\n",
-        "print(f\"Silhouette Score: {silhouette_optimal:.4f}\")\n",
-        "print(f\"Davies-Bouldin Index: {davies_bouldin_optimal:.4f}\")\n",
-        "print(f\"Calinski-Harabasz Index: {calinski_harabasz_optimal:.4f}\")\n",
+        "print(f\"Silhouette Score: {silhouette_optimal:.4f} (чем ближе к 1, тем лучше)\")\n",
+        "print(f\"Davies-Bouldin Index: {davies_bouldin_optimal:.4f}  (чем ближе к 0, тем лучше)\")\n",
+        "print(f\"Calinski-Harabasz Index: {calinski_harabasz_optimal:.4f} (чем больше, тем лучше)\")\n",
         "\n",
         "# Визуализация\n",
         "df_pca_optimal = pca.transform(df_processed)\n",
@@ -793,9 +796,9 @@
           "height": 932
         },
         "id": "SgfGSoftLa8c",
-        "outputId": "a60a1591-0890-4fab-9bd4-7ab4ed013501"
+        "outputId": "26881463-eb85-4ae3-e445-0e7782811523"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,9 +813,9 @@
             "3                        32.90        19.20   987\n",
             "\n",
             "=== Метрики качества для K-Means (k=4) ===\n",
-            "Silhouette Score: 0.1310\n",
-            "Davies-Bouldin Index: 2.3367\n",
-            "Calinski-Harabasz Index: 408.8400\n"
+            "Silhouette Score: 0.1310 (чем ближе к 1, тем лучше)\n",
+            "Davies-Bouldin Index: 2.3367  (чем ближе к 0, тем лучше)\n",
+            "Calinski-Harabasz Index: 408.8400 (чем больше, тем лучше)\n"
           ]
         },
         {
@@ -883,9 +886,9 @@
         "    calinski_harabasz_dbscan = calinski_harabasz_score(df_processed[mask], clusters_dbscan[mask])\n",
         "\n",
         "    print(\"\\n=== Метрики качества для DBSCAN ===\")\n",
-        "    print(f\"Silhouette Score: {silhouette_dbscan:.4f}\")\n",
-        "    print(f\"Davies-Bouldin Index: {davies_bouldin_dbscan:.4f}\")\n",
-        "    print(f\"Calinski-Harabasz Index: {calinski_harabasz_dbscan:.4f}\")\n",
+        "    print(f\"Silhouette Score: {silhouette_dbscan:.4f} (чем ближе к 1, тем лучше)\")\n",
+        "    print(f\"Davies-Bouldin Index: {davies_bouldin_dbscan:.4f} (чем ближе к 0, тем лучше)\")\n",
+        "    print(f\"Calinski-Harabasz Index: {calinski_harabasz_dbscan:.4f} (чем больше, тем лучше)\")\n",
         "\n",
         "    # Статистика по найденным кластерам\n",
         "    print(\"\\nСтатистика по кластерам (DBSCAN):\")\n",
@@ -911,9 +914,9 @@
           "height": 1000
         },
         "id": "FxKJzCRZLqpk",
-        "outputId": "beb5d835-188d-4d93-dcf3-ac5ad90e7156"
+        "outputId": "f46803d2-5772-4bcc-957c-1f33067f541f"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,9 +926,9 @@
             "Количество шумовых точек (выбросов): 131\n",
             "\n",
             "=== Метрики качества для DBSCAN ===\n",
-            "Silhouette Score: 0.7605\n",
-            "Davies-Bouldin Index: 0.3719\n",
-            "Calinski-Harabasz Index: 714.8381\n",
+            "Silhouette Score: 0.7605 (чем ближе к 1, тем лучше)\n",
+            "Davies-Bouldin Index: 0.3719 (чем ближе к 0, тем лучше)\n",
+            "Calinski-Harabasz Index: 714.8381 (чем больше, тем лучше)\n",
             "\n",
             "Статистика по кластерам (DBSCAN):\n",
             "                money  hour_of_day  size\n",
@@ -960,13 +963,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "При заданных параметрах eps=0.3 и min_samples=5 DBSCAN смог найти всего 2 основных кластера, а огромное количество точек (3395) посчитал шумом. Это означает, что данные очень разрежены, и плотных скоплений, которые ищет DBSCAN, в них практически нет.\n",
+        "Каждый из 235 кластеров — это, по сути, группа покупок, совершенных при практически идентичных условиях. Например, один кластер может состоять из людей, которые покупают Latte в понедельник утром в марте. Это говорит о том, что в данных существуют очень специфичные, повторяющиеся паттерны поведения.\n",
         "\n",
-        "Silhouette Score для найденных кластеров оказался очень высоким (0.65). Это говорит о том, что те немногие точки, которые алгоритм смог сгруппировать, действительно образуют очень плотные и хорошо разделенные группы.\n",
+        "Значения метрик (особенно Silhouette Score > 0.7) свидетельствуют о том, что DBSCAN не \"придумал\" эти группы, а обнаружил реально существующую в данных структуру\n",
         "\n",
-        "Из статистики видно, что кластер 0 состоит из более дорогих покупок, чем кластер 1.\n",
-        "\n",
-        "Вывод: DBSCAN показывает, что данные не имеют естественной плотной структуры. Он хорошо находит небольшие, локальные \"островки\" похожих данных, но не может сгруппировать весь датасет."
+        "131 точка, помеченная как шум, — это уникальные или очень редкие покупки, которые не вписываются ни в один из 235 устойчивых паттернов.\n",
+        "\n"
       ],
       "metadata": {
         "id": "lPEeXZFJL6ef"
@@ -975,34 +977,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "| Критерий | K-Means | DBSCAN |\n",
-        "| :--- | :--- | :--- |\n",
-        "| **Количество кластеров**| Требует задавать заранее. | Находит автоматически. |\n",
-        "| **Форма кластеров** | Ищет сферические, равные по размеру кластеры. | Может находить кластеры произвольной формы. |\n",
-        "| **Работа с выбросами** | Каждая точка относится к какому-либо кластеру, чувствителен к выбросам. | Устойчив к выбросам, выделяя их в отдельную группу (-1). |\n",
-        "| **Результат на этом датасете**| Сгруппировал все данные, но кластеры сильно пересекаются (низкий Silhouette). Выделил группы по времени суток. | Нашел только несколько очень маленьких, плотных кластеров, а большинство данных определил как шум. |"
+        "K-Means подходит для макро-сегментации. Он дал простое и понятное разделение на 4 больших сегмента, которые легко интерпретировать на высоком уровне (например, \"утренние покупатели\", \"вечерние покупатели\"). Это полезно для общих маркетинговых стратегий.\n",
+        "\n",
+        "DBSCAN подходит для микро-сегментации и поиска паттернов. Он показал себя намного мощнее в поиске детальной, скрытой структуры данных. Его результат позволяет выявлять узкие группы клиентов с очень предсказуемым поведением для сверхцелевого маркетинга; находить аномальные транзакции, которые могут потребовать отдельного изучения; лучше понимать разнообразие покупательских привычек, так как он не пытается усреднить всех, а выделяет каждую устойчивую модель поведения в отдельный кластер."
       ],
       "metadata": {
-        "id": "namjMSctNzZW"
+        "id": "1CgBCI2ZO95a"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Для данного датасета K-Means подходит лучше, чем DBSCAN.\n",
-        "\n",
-        "Обоснование:\n",
-        "\n",
-        "Цель анализа: Наша задача — сегментировать все покупки. K-Means справляется с этим, разделяя все данные на группы, пусть и не с идеальным качеством. DBSCAN же оказался неспособен сгруппировать большую часть данных, пометив их как \"шум\", что не решает нашу задачу сегментации.\n",
-        "\n",
-        "Структура данных: Отсутствие четкого \"локтя\" и результат DBSCAN говорят о том, что в данных нет естественных, плотных скоплений. Данные, скорее, распределены равномерно. В таких условиях K-Means принудительно делит пространство на области, что в данном случае является более прагматичным подходом для бизнес-анализа (например, для выделения сегментов \"утро\", \"день\", \"вечер\").\n",
-        "\n",
-        "Интерпретируемость: Кластеры, полученные с помощью K-Means, легко интерпретировать. Например, мы четко выделили группы по времени совершения покупки, что может быть полезно для маркетинговых акций. Кластеры DBSCAN слишком малы и специфичны, чтобы делать на их основе широкие выводы.\n",
-        "\n",
-        "Таким образом, несмотря на невысокие формальные метрики, K-Means дает более осмысленный и практически применимый результат для этого конкретного набора данных."
+        "Если цель — получить общее представление о клиентах, достаточно K-Means. Если же цель — найти конкретные, предсказуемые группы для точечного воздействия или выявить аномалии, то DBSCAN справился с задачей несравнимо лучше и предоставил гораздо более глубокое понимание структуры данных."
       ],
       "metadata": {
-        "id": "1CgBCI2ZO95a"
+        "id": "_xGe45I-2LEU"
       }
     }
   ]
