--- a/"Домашнее_задание_3_ipynb".ipynb
+++ b/"Домашнее_задание_3_ipynb".ipynb
@@ -522,6 +522,8 @@
         "F1-score: Среднее гармоническое между точностью и полнотой, полезно при\n",
         "дисбалансе классов.\n",
         "\n",
+        "ROC-AUC: Измеряет способность модели различать классы, независимо от выбранного порога вероятности\n",
+        "\n",
         "Confusion Matrix (Матрица ошибок): Показывает, какие классы модель путает между собой."
       ],
       "metadata": {
