--- a/"Домашнее_задание_2_ipynb".ipynb
+++ b/"Домашнее_задание_2_ipynb".ipynb
@@ -4024,6 +4024,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Коэффициент детерминации (R²) 0.867 говорит о том, что название кофе объясняет почти 87% вариации цены. Средняя ошибка составляет всего 4.2%. Поскольку модель оценивалась на тех же данных, на которых обучалась, она могла просто запомнить правильные ответы.\n",
+        "\n",
+        "Данная модель служит хорошей отправной точкой, но ее реальная производительность на новых данных, скорее всего, будет ниже."
+      ],
+      "metadata": {
+        "id": "0d_R-d-z-zXy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -4151,6 +4162,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "R² на тестовых данных равен 0.852. Это означает, что модель хорошо обобщает закономерности и способна предсказывать цены на новых данных, объясняя 85% их изменчивости.\n",
+        "Низкое переобучение: Метрики на обучающей и тестовой выборках очень близки (например, R² упал всего с 0.870 до 0.852). Это говорит о том, что модель не заучила данные, а действительно нашла устойчивую связь между названием кофе и его ценой. Это лучшая модель в данном анализе."
+      ],
+      "metadata": {
+        "id": "9-SY3PyL_CM8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "coefficients1_df = pd.DataFrame({\n",
@@ -4232,6 +4253,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Результаты резко и значительно ухудшились. R² упал с 87% до всего 36%. Средняя ошибка (MAE, MAPE) выросла более чем в два раза. Модель потеряла слишком много важной информации, когда мы оставили только 3 из 8 признаков. Это показывает, что даже признаки с меньшими коэффициентами вносят существенный коллективный вклад в качество предсказания."
+      ],
+      "metadata": {
+        "id": "xUxFbEFK_Ote"
+      }
     },
     {
       "cell_type": "code",
@@ -4357,6 +4387,28 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Эта модель подтверждает выводы, сделанные по Модели 3, но уже на независимых данных. Качество предсказаний на тестовой выборке очень низкое (R² = 33.5%). Модель плохо работает как на обучающих, так и на тестовых данных. Это окончательно доказывает, что упрощение модели путем отбрасывания большинства признаков было плохой идеей."
+      ],
+      "metadata": {
+        "id": "qzyuq6fk_V4C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Лучшая модель — Модель 2. Она использует все доступные признаки и оценивается на тестовой выборке, что дает наиболее реалистичную и высокую оценку ее производительности (R² ≈ 85%). Она хорошо обобщает данные и не страдает от переобучения.\n",
+        "\n",
+        "Оценка на обучающей выборке обманчива. Сравнение Модели 1 и Модели 2 показывает, почему всегда необходимо использовать тестовую выборку. Метрики на тренировке почти всегда выглядят лучше, чем в реальности.\n",
+        "\n",
+        "Сравнение Модели 2 и Модели 4 наглядно демонстрирует, что отбрасывание признаков только на основе величины их коэффициентов может привести к катастрофическому падению качества модели (R² упал с 85% до 33%). В данном случае все категории напитков были важны для полного описания зависимости."
+      ],
+      "metadata": {
+        "id": "Kx60W8Ju_8GZ"
+      }
     }
   ],
   "metadata": {
