--- a/"Домашнее_задание_2_ipynb".ipynb
+++ b/"Домашнее_задание_2_ipynb".ipynb
@@ -3916,6 +3916,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Модель 1**\n",
+        "\n",
+        "Использовать все признаки (кроме y).\n",
+        "\n",
+        "Обучить на всей выборке (без разделения).\n",
+        "\n",
+        "Сделать предсказания на этой же выборке.\n",
+        "\n",
+        "Вывести метрики и интерпретировать.\n",
+        "\n",
+        "Построить график коэффициентов (model.coef_ vs X_scaled.columns) и интерпретировать."
+      ],
+      "metadata": {
+        "id": "cGT-phJZBSca"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, mean_absolute_percentage_error, root_mean_squared_error\n",
@@ -4032,6 +4051,25 @@
       ],
       "metadata": {
         "id": "0d_R-d-z-zXy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Модель 2**\n",
+        "\n",
+        "Использовать все признаки.\n",
+        "\n",
+        "Сделать train_test_split.\n",
+        "\n",
+        "Обучить на X_train, предсказать на X_train и X_test.\n",
+        "\n",
+        "Вывести метрики для обучающей и тестовой выборки, интерпретировать.\n",
+        "\n",
+        "Визуализировать коэффициенты и интерпретировать."
+      ],
+      "metadata": {
+        "id": "vE4olq2rBZrN"
       }
     },
     {
@@ -4172,6 +4210,25 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Модель 3**\n",
+        "\n",
+        "Использовать только best_features (отобранные признаки).\n",
+        "\n",
+        "Обучить на всей выборке.\n",
+        "\n",
+        "Предсказать на всей выборке.\n",
+        "\n",
+        "Вывести метрики качества и интерпретировать.\n",
+        "\n",
+        "Визуализировать коэффициенты и интерпретировать."
+      ],
+      "metadata": {
+        "id": "jDCMCHmNBj1l"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "coefficients1_df = pd.DataFrame({\n",
@@ -4261,6 +4318,25 @@
       ],
       "metadata": {
         "id": "xUxFbEFK_Ote"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Модель 4**\n",
+        "\n",
+        "Использовать best_features.\n",
+        "\n",
+        "Сделать train_test_split.\n",
+        "\n",
+        "Обучить на X_train, предсказать на X_train и X_test.\n",
+        "\n",
+        "Вывести метрики качества для обучающей и тестовой выборки, интерпретировать.\n",
+        "\n",
+        "Визуализировать коэффициенты и интерпретировать."
+      ],
+      "metadata": {
+        "id": "BnqRqMjXBoXZ"
       }
     },
     {
